[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-sandbox-core"
dynamic = ["version", "description"]
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = []
dependencies = []

[tool.flit.module]
name = "ansys.sandbox.core"

[tool.bumpver]
current_version = "0.1.1"
version_pattern = "[MAJOR].[MINOR][.PATCH][.TAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"src/ansys/sandbox/core/__init__.py" = [
    '__version__ = "{version}"',
]
